Revamp dynamic layouts

--- a/index.html
+++ b/index.html
@@ -8,143 +8,155 @@
     <link href="Content/coreGrid.css" rel="stylesheet" />
     <link href="Content/index.css" rel="stylesheet" />
 </head>
-<body>
+<body id="CoreGridSystem">
     <header>
         <div class="container"><h1>Core Grid</h1></div>
-</header>
+    </header>
     <main class="container indexPage">
-        <section class="col_3">
-            <nav>
-                <a href="#CoreGridSystem">Core Grid System</a>
-                <a href="#PrimaryDefaultGrid">Primary Default Grid</a>
-                <a href="#SecondaryControlGrid">Secondary Control Grid</a>
-                <a href="#GridLayout">Grid Layout</a>
-                <a href="#Utilities">Utilities</a>
-            </nav>
-        </section>
-        <section class="col_9 omega">
-            <h2 id="CoreGridSystem">Core Grid System</h2>
-            <p>
-                Core Grid is a simple mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
-                of content layouts and a secondary semantic grid for fined tuned control over layouts.
-            </p>
-
-            
-            <h2 id="PrimaryDefaultGrid">Primary Default Grid</h2>
-            <p>
-                The first primary default is optimized for single
-                column layout. All columns start at a width of 100%. Use the specified class name to trigger columns at the corresponding container width.
-                <br /><br />
-                The class structure is the following <strong>(.column_width_breakpoint)</strong><br /><br />
-                Example ".col_6_md"<br />
-                <ul>
-                    <li>".col" defines that you want a column.</li>
-                    <li>"_6" defines how many columns wide you want the column to be.</li>
-                    <li>"_md" defines the default breakpoint you would like your column width to be triggered at.</li>
-                    <li>"omega" class must be applied to the last column of any given row to remove far right gutter.</li>
-                </ul>
-            </p><br />
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>
-                            Extra Small devices
-                            <small>Phones</small>
-                        </th>
-                        <th>
-                            Small devices
-                            <small>Phones/Tablets (≥540px)</small>
-                        </th>
-                        <th>
-                            Medium devices
-                            <small>Tablets/Laptops (≥720px)</small>
-                        </th>
-                        <th>
-                            Large devices
-                            <small>Laptop/Desktop (≥960px)</small>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>Behavior</th>
-                        <td>Always 100% </td>
-                        <td colspan="3">Width 100% to start, horizontal at above breakpoints</td>
-                    </tr>
-                    <tr>
-                        <th>Container width</th>
-                        <td>Auto</td>
-                        <td>540px</td>
-                        <td>720px</td>
-                        <td>960px</td>
-                    </tr>
-                    <tr>
-                        <th>CSS Class</th>
-                        <td><code>.col_12 (or) .row</code></td>
-                        <td><code>.col_1_sm</code></td>
-                        <td><code>.col_1_md (or) .col_1</code></td>
-                        <td><code>.col_1_lg</code></td>
-                    </tr>
-                    <tr>
-                        <th># of columns</th>
-                        <td>1</td>
-                        <td colspan="3">12</td>
-                    </tr>
-                    <tr>
-                        <th>Column width</th>
-                        <td>Auto</td>
-                        <td colspan="3">6.5% at specified breakpoint</td>                     
-                    </tr>
-                    <tr>
-                        <th>Gutter width</th>
-                        <td>Auto</td>
-                        <td colspan="4">2% width, right of column except last column.</td>
-                    </tr>
-                    <tr>
-                        <th>Nestable</th>
-                        <td colspan="4">Yes</td>
-                    </tr>
-                </tbody>
-            </table>
-            <br /><br />
-            <h2>Primary Grid Example</h2>
-            <code>
-                <pre>
-&lt;section&gt; 
-    &lt;div class=&quot;col_4_sm&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_8_sm omega&quot;&gt;&lt;/div&gt;
- 
-    &lt;div class=&quot;col_6_md&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_6_md omega&quot;&gt;&lt;/div&gt;
- 
-    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_4_lg omega&quot;&gt;&lt;/div&gt; 
-&lt;/section&gt;
-                </pre>
-            </code>
-            <section class="coreGrid">
-                <div class="col_4_sm">.col_4_sm</div>
-                <div class="col_8_sm omega">.col_8_sm</div>
-                <div class="col_6_md">.col_6_md</div>
-                <div class="col_6_md omega">.col_6_md</div>
-                <div class="col_4_lg">.col_4_lg</div>
-                <div class="col_4_lg">.col_4_lg</div>
-                <div class="col_4_lg omega">.col_4_lg</div>
+        <div class="headerBuff">
+            <section class="col_3">
+                <nav>
+                    <a href="#CoreGridSystem">Core Grid System</a>
+                    <a href="#PrimaryDefaultGrid">Primary Default</a>
+                    <a href="#DynamicLayouts">Dynamic Layouts</a>
+                    <a href="#SecondaryControlGrid">Secondary Control</a>
+                    <a href="#GridLayout">Grid Layout</a>
+                    <a href="#Utilities">Utilities</a>
+                </nav>
             </section>
-            <div class="clearBoth"></div>
-            <br /><br />
-            <h2 id="SecondaryControlGrid">Secondary Control Grid</h2>
-            <p>A secondary grid is for the fined tuned control over your breakpoints. All .col start at 100% mobile first. 
-            To enable cols at certain width use media queries. Secondary grid follows the naming convention col__1 
-            (two underscores).</p>
-            <section>
+            <section class="col_9">
+                <h2>Core Grid System</h2>
+                <p>
+                    Core Grid is a simple mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
+                    of content layouts and a secondary semantic grid for fined tuned control over layouts.
+                </p>
+
+                <div id="PrimaryDefaultGrid" class="linkHandle"></div>
+                <h2>Primary Default Grid</h2>
+                <p>
+                    The first primary default is optimized for single
+                    column layout. All columns start at a width of 100%. Use the specified class name to trigger columns at the corresponding container width.
+                    <br /><br />
+                    The class structure is the following <strong>(.column_width_breakpoint)</strong><br /><br />
+                    Example ".col_6_md"<br />
+                    <ul>
+                        <li>".col" defines that you want a column.</li>
+                        <li>"_6" defines how many columns wide you want the column to be.</li>
+                        <li>"_md" defines the default breakpoint you would like your column width to be triggered at.</li>
+                    </ul>
+                </p><br />
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>
+                                Extra Small devices
+                                <small>Phones</small>
+                            </th>
+                            <th>
+                                Small devices
+                                <small>Phones/Tablets (≥540px)</small>
+                            </th>
+                            <th>
+                                Medium devices
+                                <small>Tablets/Laptops (≥720px)</small>
+                            </th>
+                            <th>
+                                Large devices
+                                <small>Laptop/Desktop (≥960px)</small>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Behavior</th>
+                            <td>Always 100% </td>
+                            <td colspan="3">Width 100% to start, horizontal at above breakpoints</td>
+                        </tr>
+                        <tr>
+                            <th>Container width</th>
+                            <td>Auto</td>
+                            <td>540px</td>
+                            <td>720px</td>
+                            <td>960px</td>
+                        </tr>
+                        <tr>
+                            <th>CSS Class</th>
+                            <td><code>.col_12 (or) .row</code></td>
+                            <td><code>.col_1_sm</code></td>
+                            <td><code>.col_1_md (or) .col_1</code></td>
+                            <td><code>.col_1_lg</code></td>
+                        </tr>
+                        <tr>
+                            <th># of columns</th>
+                            <td>1</td>
+                            <td colspan="3">12</td>
+                        </tr>
+                        <tr>
+                            <th>Column width</th>
+                            <td>Auto</td>
+                            <td colspan="3">6.5% at specified breakpoint</td>
+                        </tr>
+                        <tr>
+                            <th>Gutter width</th>
+                            <td>Auto</td>
+                            <td colspan="4">1% width, right and left of column.</td>
+                        </tr>
+                        <tr>
+                            <th>Nestable</th>
+                            <td colspan="4">Yes</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br /><br />
+                <h3>Primary Default Grid Example</h3>
                 <code>
                     <pre>
+&lt;section&gt; 
+    &lt;div class=&quot;col_4_sm&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col_8_sm&quot;&gt;&lt;/div&gt;
+ 
+    &lt;div class=&quot;col_6_md&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col_6_md&quot;&gt;&lt;/div&gt;
+ 
+    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
+&lt;/section&gt;
+                </pre>
+                </code>
+                <section class="coreGrid">
+                    <div class="col_4_sm"><div class="box">.col_4_sm</div></div>
+                    <div class="col_8_sm"><div class="box">.col_8_sm</div></div>
+                    <div class="col_6_md"><div class="box">.col_6_md</div></div>
+                    <div class="col_6_md"><div class="box">.col_6_md</div></div>
+                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
+                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
+                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
+                </section>
+
+                <div id="DynamicLayouts" class="linkHandle"></div>
+                <h2>Dynamic Layouts</h2>
+                <section class="coreGrid">
+                    <div class="col_4_sm col_6_lg"><div class="box">.col_4_sm .col_6_lg</div></div>
+                    <div class="col_4_sm col_6_lg"><div class="box">.col_4_sm .col_6_lg</div></div>
+                    <div class="col_4_sm col_12_lg"><div class="box">.col_4_sm .col_12_lg</div></div>
+                </section>
+                <br />
+
+                <div id="SecondaryControlGrid" class="linkHandle"></div>
+                <h2>Secondary Control Grid</h2>
+                <p>
+                    A secondary grid is for the fined tuned control over your breakpoints. All .col start at 100% mobile first.
+                    To enable cols at certain width use media queries. Secondary grid follows the naming convention col__1
+                    (two underscores).
+                </p>
+                <section>
+                    <code>
+                        <pre>
 &lt;section class=&quot;pageClass&quot;&gt; 
     &lt;div class=&quot;col__6&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col__6 omega&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col__6&quot;&gt;&lt;/div&gt; 
 &lt;/section&gt;
 @media all and (min-width: 33em)
     .pageClass {
@@ -154,58 +166,63 @@
     }
 }
                 </pre>
-                </code>
-                <section class="pageClass">
-                    <div class="col__6">.col__6</div>
-                    <div class="col__6 omega">.col__6</div>
+                    </code>
+                    <section class="pageClass">
+                        <div class="col__6"><div class="box">.col__6</div></div>
+                        <div class="col__6"><div class="box">.col__6</div></div>
+                    </section>
                 </section>
+                <div id="GridLayout" class="linkHandle"></div>
+                <h2>Grid Layout</h2>
+                <section class="coreGrid">
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="box">.col_1</div></div>
+
+                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="box">.col_2</div></div>
+
+                    <div class="col_3"><div class="box">.col_3</div></div>
+                    <div class="col_3"><div class="box">.col_3</div></div>
+                    <div class="col_3"><div class="box">.col_3</div></div>
+                    <div class="col_3"><div class="box">.col_3</div></div>
+
+                    <div class="col_4"><div class="box">.col_4</div></div>
+                    <div class="col_4"><div class="box">.col_4</div></div>
+                    <div class="col_4"><div class="box">.col_4</div></div>
+
+                    <div class="col_6"><div class="box">.col_6</div></div>
+                    <div class="col_6"><div class="box">.col_6</div></div>
+
+                    <div class="col_12"><div class="box">.col_12</div></div>
+
+                    <div class="col_5"><div class="box">.col_5</div></div>
+                    <div class="col_7"><div class="box">.col_7</div></div>
+
+                    <div class="col_8"><div class="box">.col_8</div></div>
+                    <div class="col_4"><div class="box">.col_4</div></div>
+                </section>
+                <div id="Utilities" class="linkHandle"></div>
+                <h2>Utilities</h2>
+                <p>By leveraging Sass we can have a true mobile first responsive grid and still support olderIE versions. 
+                   Using special Sass mixins we can create a seperate old IE style sheet for a fixed grid
+                    for our media queriesTo support ie8 and below 
+                </p>
             </section>
-            <div class="clearBoth"></div>
-            <br /><br />
-
-            <h2 id="GridLayout">Grid Layout</h2>
-            <section class="coreGrid">
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1">.col_1</div>
-                <div class="col_1 omega">.col_1</div>
-
-                <div class="col_2">.col_2</div>
-                <div class="col_2">.col_2</div>
-                <div class="col_2">.col_2</div>
-                <div class="col_2">.col_2</div>
-                <div class="col_2">.col_2</div>
-                <div class="col_2 omega">.col_2</div>
-
-                <div class="col_3">.col_3</div>
-                <div class="col_3">.col_3</div>
-                <div class="col_3">.col_3</div>
-                <div class="col_3 omega">.col_3</div>
-
-                <div class="col_4">.col_4</div>
-                <div class="col_4">.col_4</div>
-                <div class="col_4 omega">.col_4</div>
-
-                <div class="col_6">.col_6</div>
-                <div class="col_6 omega">.col_6</div>
-
-                <div class="col_12">.col_12</div>
-
-                <div class="col_5">.col_5</div>
-                <div class="col_7 omega">.col_7</div>
-
-                <div class="col_8">.col_8</div>
-                <div class="col_4 omega">.col_4</div>
-            </section>
-        </section>
+        </div>
     </main>
     <footer>
         <a href="http://www.webdesignis.me" target="_blank">Cory Bateman www.corycode.me</a>
