--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Example ".col_6_md"<br />
                     <ul>
                         <li>".col" defines that you want a column.</li>
-                        <li>"_6" defines how many columns wide you want the column to be.</li>
+                        <li>"_6" defines how many columns you want the column to span.</li>
                         <li>"_md" defines the default breakpoint you would like your column width to be triggered at.</li>
                     </ul>
                 </p><br />
@@ -88,14 +88,14 @@
                             <td><code>.col_1_lg</code></td>
                         </tr>
                         <tr>
-                            <th># of columns</th>
+                            <th>Columns</th>
                             <td>1</td>
                             <td colspan="3">12</td>
                         </tr>
                         <tr>
                             <th>Column width</th>
                             <td>Auto</td>
-                            <td colspan="3">6.5% at specified breakpoint</td>
+                            <td colspan="3">8.333% at specified breakpoint</td>
                         </tr>
                         <tr>
                             <th>Gutter width</th>
