--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-    <link href="Content/coreGrid.css" rel="stylesheet" />
-    <link href="Content/index.css" rel="stylesheet" />
+    <!--[if gt IE 8]><!-->
+        <link href="Content/coreGrid.css" rel="stylesheet" />   
+    <!--<![endif]-->
+    <!--[if lte IE 8]>
+        <link href="Content/oldIE.css" rel="stylesheet" />
+    <![endif]-->
+        <link href="Content/index.css" rel="stylesheet" />
 </head>
 <body id="CoreGridSystem">
     <header>
@@ -25,139 +30,169 @@
                 </nav>
             </section>
             <section class="col_9">
-                <h2>Core Grid System</h2>
-                <p>
-                    Core Grid is a simple mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
-                    of content layouts and a secondary semantic grid for fined tuned control over layouts.
-                </p>
-
+                <div class="col_12">
+                    <h2>Core Grid System</h2>
+                    <p>
+                        Core Grid is a dynamic mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
+                        of content layouts and a secondary semantic grid for fined tuned control over layouts.
+                    </p>
+                </div>
                 <div id="PrimaryDefaultGrid" class="linkHandle"></div>
-                <h2>Primary Default Grid</h2>
-                <p>
-                    The first primary default is optimized for single
-                    column layout. All columns start at a width of 100%. Use the specified class name to trigger columns at the corresponding container width.
-                    <br /><br />
-                    The class structure is the following <strong>(.column_width_breakpoint)</strong><br /><br />
-                    Example ".col_6_md"<br />
-                    <ul>
-                        <li>".col" defines that you want a column.</li>
-                        <li>"_6" defines how many columns you want the column to span.</li>
-                        <li>"_md" defines the default breakpoint you would like your column width to be triggered at.</li>
-                    </ul>
-                </p><br />
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>
-                                Extra Small devices
-                                <small>Phones</small>
-                            </th>
-                            <th>
-                                Small devices
-                                <small>Phones/Tablets (≥540px)</small>
-                            </th>
-                            <th>
-                                Medium devices
-                                <small>Tablets/Laptops (≥720px)</small>
-                            </th>
-                            <th>
-                                Large devices
-                                <small>Laptop/Desktop (≥960px)</small>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>Behavior</th>
-                            <td>Always 100% </td>
-                            <td colspan="3">Width 100% to start, horizontal at above breakpoints</td>
-                        </tr>
-                        <tr>
-                            <th>Container width</th>
-                            <td>Auto</td>
-                            <td>540px</td>
-                            <td>720px</td>
-                            <td>960px</td>
-                        </tr>
-                        <tr>
-                            <th>CSS Class</th>
-                            <td><code>.col_12 (or) .row</code></td>
-                            <td><code>.col_1_sm</code></td>
-                            <td><code>.col_1_md (or) .col_1</code></td>
-                            <td><code>.col_1_lg</code></td>
-                        </tr>
-                        <tr>
-                            <th>Columns</th>
-                            <td>1</td>
-                            <td colspan="3">12</td>
-                        </tr>
-                        <tr>
-                            <th>Column width</th>
-                            <td>Auto</td>
-                            <td colspan="3">8.333% at specified breakpoint</td>
-                        </tr>
-                        <tr>
-                            <th>Gutter width</th>
-                            <td>Auto</td>
-                            <td colspan="4">1% width, right and left of column.</td>
-                        </tr>
-                        <tr>
-                            <th>Nestable</th>
-                            <td colspan="4">Yes</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="col_12">
+                    <h2>Primary Default Grid</h2>
+                    <p>
+                        The first primary default is optimized for single
+                        column layout. All columns start at a width of 100%. Use the specified class name to trigger columns at the corresponding container width.
+                        <br /><br />
+                        The class structure is the following <strong>(.column_width_breakpoint)</strong><br /><br />
+                        Example ".col_6_md"<br />
+                        <ul>
+                            <li>".col" defines that you want a column.</li>
+                            <li>"_6" defines how many columns you want the column to span.</li>
+                            <li>"_md" defines the default breakpoint you would like your column width to be triggered at.</li>
+                        </ul>
+                    </p>
+                </div><br />
+                <div class="col_12">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>
+                                    Extra Small devices
+                                    <small>Phones</small>
+                                </th>
+                                <th>
+                                    Small devices
+                                    <small>Phones/Tablets (≥540px)</small>
+                                </th>
+                                <th>
+                                    Medium devices
+                                    <small>Tablets/Laptops (≥720px)</small>
+                                </th>
+                                <th>
+                                    Large devices
+                                    <small>Laptop/Desktop (≥960px)</small>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>Behavior</th>
+                                <td>Always 100% </td>
+                                <td colspan="3">Width 100% to start, horizontal at above breakpoints</td>
+                            </tr>
+                            <tr>
+                                <th>Container width</th>
+                                <td>Auto</td>
+                                <td>540px</td>
+                                <td>720px</td>
+                                <td>960px</td>
+                            </tr>
+                            <tr>
+                                <th>CSS Class</th>
+                                <td><code>.col_12 (or) .row</code></td>
+                                <td><code>.col_1_sm</code></td>
+                                <td><code>.col_1_md (or) .col_1</code></td>
+                                <td><code>.col_1_lg</code></td>
+                            </tr>
+                            <tr>
+                                <th>Columns</th>
+                                <td>1</td>
+                                <td colspan="3">12</td>
+                            </tr>
+                            <tr>
+                                <th>Column width</th>
+                                <td>Auto</td>
+                                <td colspan="3">8.333% at specified breakpoint</td>
+                            </tr>
+                            <tr>
+                                <th>Gutter width</th>
+                                <td>Auto</td>
+                                <td colspan="4">1% width, right and left of column.</td>
+                            </tr>
+                            <tr>
+                                <th>Nestable</th>
+                                <td colspan="4">Yes</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <br /><br />
-                <h3>Primary Default Grid Example</h3>
-                <code>
-                    <pre>
+                <div class="col_12">
+                    <h3>Primary Default Grid Example</h3>
+                    <code>
+                        <pre>
 &lt;section&gt; 
-    &lt;div class=&quot;col_4_sm&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_8_sm&quot;&gt;&lt;/div&gt;
+    &lt;div class=&quot;col_6_sm&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_6_sm&quot;&gt; &lt;/div&gt;
  
-    &lt;div class=&quot;col_6_md&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_6_md&quot;&gt;&lt;/div&gt;
- 
-    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
-    &lt;div class=&quot;col_4_lg&quot;&gt;&lt;/div&gt; 
+    &lt;div class=&quot;col_4_lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_4_lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_4_lg&quot;&gt; &lt;/div&gt; 
+
+    &lt;div class=&quot;col_3_md&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_3_md&quot;&gt; &lt;/div&gt;
+    &lt;div class=&quot;col_3_md&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_3_md&quot;&gt; &lt;/div&gt;
 &lt;/section&gt;
-                </pre>
-                </code>
+                        </pre>
+                    </code>
+                </div>
                 <section class="coreGrid">
-                    <div class="col_4_sm"><div class="box">.col_4_sm</div></div>
-                    <div class="col_8_sm"><div class="box">.col_8_sm</div></div>
-                    <div class="col_6_md"><div class="box">.col_6_md</div></div>
-                    <div class="col_6_md"><div class="box">.col_6_md</div></div>
-                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
-                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
-                    <div class="col_4_lg"><div class="box">.col_4_lg</div></div>
+                    <div class="col_6_sm"><div class="box">.col_6_sm</div></div>
+                    <div class="col_6_sm"><div class="box">.col_6_sm</div></div>
+                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
+                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
+                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
+                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
                 </section>
 
                 <div id="DynamicLayouts" class="linkHandle"></div>
-                <h2>Dynamic Layouts</h2>
-                <section class="coreGrid">
-                    <div class="col_4_sm col_6_lg"><div class="box">.col_4_sm .col_6_lg</div></div>
-                    <div class="col_4_sm col_6_lg"><div class="box">.col_4_sm .col_6_lg</div></div>
-                    <div class="col_4_sm col_12_lg"><div class="box">.col_4_sm .col_12_lg</div></div>
-                </section>
-                <br />
-
-                <div id="SecondaryControlGrid" class="linkHandle"></div>
-                <h2>Secondary Control Grid</h2>
-                <p>
-                    A secondary grid is for the fined tuned control over your breakpoints. All .col start at 100% mobile first.
-                    To enable cols at certain width use media queries. Secondary grid follows the naming convention col__1
-                    (two underscores).
-                </p>
-                <section>
+                <div class="col_12">
+                    <h2>Dynamic Layouts</h2>
+                    <p>Core Grid allows dynamic changing of column sizes. Example below we have four containers. 
+                    By default they are 100% in width. At our "_sm" breakpoint they will span the width of 6 columns. 
+                    The second class "_lg" defines our second change that will ocur at the large breakpoint. 
+                    This will trigger the columns to span 3 columns wide.</p>
                     <code>
                         <pre>
+&lt;section&gt; 
+    &lt;div class=&quot;col_6_sm col_3_lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_6_sm col_3_lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col_6_sm col_3_lg&quot;&gt; &lt;/div&gt;
+    &lt;div class=&quot;col_6_sm col_3_lg&quot;&gt; &lt;/div&gt;
+&lt;/section&gt;
+                     </pre>
+                    </code>
+                </div>
+                <section class="coreGrid">
+                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
+                </section>
+                <br />
+                
+
+                <div id="SecondaryControlGrid" class="linkHandle"></div>
+                <div class="col_12">
+                    <h2>Secondary Control Grid</h2>
+                    <p>
+                        A secondary grid is for the fined tuned control over your breakpoints. All .col start at 100% mobile first.
+                        To enable cols at certain width use media queries. Secondary grid follows the naming convention col__1
+                        (two underscores).
+                    </p>
+                        <code>
+                            <pre>
 &lt;section class=&quot;pageClass&quot;&gt; 
     &lt;div class=&quot;col__6&quot;&gt;&lt;/div&gt; 
     &lt;div class=&quot;col__6&quot;&gt;&lt;/div&gt; 
 &lt;/section&gt;
+
 @media all and (min-width: 33em)
     .pageClass {
         .col__6 {
@@ -165,15 +200,16 @@
         }
     }
 }
-                </pre>
+                            </pre>
                     </code>
-                    <section class="pageClass">
-                        <div class="col__6"><div class="box">.col__6</div></div>
-                        <div class="col__6"><div class="box">.col__6</div></div>
-                    </section>
+                </div>
+                <section class="pageClass">
+                    <div class="col__6"><div class="box">.col__6</div></div>
+                    <div class="col__6"><div class="box">.col__6</div></div>
                 </section>
+            
                 <div id="GridLayout" class="linkHandle"></div>
-                <h2>Grid Layout</h2>
+                <div class="col_12"><h2>Grid Layout</h2></div>
                 <section class="coreGrid">
                     <div class="col_1"><div class="box">.col_1</div></div>
                     <div class="col_1"><div class="box">.col_1</div></div>
@@ -215,17 +251,21 @@
                     <div class="col_8"><div class="box">.col_8</div></div>
                     <div class="col_4"><div class="box">.col_4</div></div>
                 </section>
-                <div id="Utilities" class="linkHandle"></div>
-                <h2>Utilities</h2>
-                <p>By leveraging Sass we can have a true mobile first responsive grid and still support olderIE versions. 
-                   Using special Sass mixins we can create a seperate old IE style sheet for a fixed grid
-                    for our media queriesTo support ie8 and below 
-                </p>
+                <div class="col_12">
+                    <div id="Utilities" class="linkHandle"></div>
+                    <h2>Utilities</h2>
+                    <p>
+                        By leveraging Sass we can have a true mobile first responsive grid and still support older IE versions.
+                        Using special Sass mixins we can create a seperate old IE style sheet for a fixed grid
+                        for our media queries to support ie8 and below. To read more on this please read Jake Archibalds great blog post
+                        <a href="http://jakearchibald.github.io/sass-ie/" target="_blank">here</a>.
+                    </p>
+                </div>
             </section>
         </div>
     </main>
     <footer>
-        <a href="http://www.webdesignis.me" target="_blank">Cory Bateman www.corycode.me</a>
+        <a href="http://www.corycode.me" target="_blank">Cory Bateman www.corycode.me</a>
     </footer>
 </body>
 </html>
