--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <h2>Dynamic Layouts</h2>
                     <p>Core Grid allows dynamic changing of column sizes. Example below we have four containers. 
                     By default they are 100% in width. At our "_sm" breakpoint they will span the width of 6 columns. 
-                    The second class "_lg" defines our second change that will ocur at the large breakpoint. 
+                    The second class "_lg" defines our second change that will occur at the large breakpoint. 
                     This will trigger the columns to span 3 columns wide.</p>
                     <code>
                         <pre>
