minor grid work

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!--[if gt IE 8]><!-->
-        <link href="Content/coreGrid.css" rel="stylesheet" />   
+        <link href="Content/coreGrid.min.css" rel="stylesheet" />   
     <!--<![endif]-->
     <!--[if lte IE 8]>
-        <link href="Content/oldIE.css" rel="stylesheet" />
+        <link href="Content/oldIE.min.css" rel="stylesheet" />
     <![endif]-->
-        <link href="Content/index.css" rel="stylesheet" />
+        <link href="Content/index.min.css" rel="stylesheet" />
 </head>
 <body id="CoreGridSystem">
     <header>
@@ -97,6 +97,10 @@
                                 <td><code>.col_1_lg</code></td>
                             </tr>
                             <tr>
+                                <th>Nestable</th>
+                                <td colspan="4">Yes</td>
+                            </tr>
+                            <tr>
                                 <th>Columns</th>
                                 <td>1</td>
                                 <td colspan="3">12</td>
@@ -110,10 +114,6 @@
                                 <th>Gutter width</th>
                                 <td>Auto</td>
                                 <td colspan="4">1% width, right and left of column.</td>
-                            </tr>
-                            <tr>
-                                <th>Nestable</th>
-                                <td colspan="4">Yes</td>
                             </tr>
                         </tbody>
                     </table>
@@ -265,7 +265,8 @@
         </div>
     </main>
     <footer>
-        <a href="http://www.corycode.me" target="_blank">Cory Bateman www.corycode.me</a>
+        <a href="http://www.corycode.me" target="_blank">Cory Bateman www.corycode.me</a><br /><br />
+        <a href="https://github.com/splintercode/CoreGrid">Contribute on GitHub</a>
     </footer>
 </body>
 </html>
