--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <a href="http://jakearchibald.github.io/sass-ie/" target="_blank">here</a>.
                     </p>
 
-                    <p>Core Grid contains multiple helper classes to show and hide content to the cooresponding grid breakpoints.</p>
+                    <p>Core Grid contains multiple helper classes to show and hide content to the corresponding grid breakpoints.</p>
                     <table class="table visibleTable">
                         <thead>
                             <tr>
