Minor sass updates

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </tr>
                             <tr>
                                 <th>Columns</th>
-                                <td>12</td>
+                                <td colspan="4">12</td>
                             </tr>
                             <tr>
                                 <th>Column width</th>
@@ -137,15 +137,15 @@
                     </code>
                 </div>
                 <section class="coreGrid">
-                    <div class="col_6_sm"><div class="box">.col_6_sm</div></div>
-                    <div class="col_6_sm"><div class="box">.col_6_sm</div></div>
-                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
-                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
-                    <div class="col_4_md"><div class="box">.col_4_md</div></div>
-                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
-                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
-                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
-                    <div class="col_3_lg"><div class="box">.col_3_lg</div></div>
+                    <div class="col_6_sm"><div class="gridBox">.col_6_sm</div></div>
+                    <div class="col_6_sm"><div class="gridBox">.col_6_sm</div></div>
+                    <div class="col_4_md"><div class="gridBox">.col_4_md</div></div>
+                    <div class="col_4_md"><div class="gridBox">.col_4_md</div></div>
+                    <div class="col_4_md"><div class="gridBox">.col_4_md</div></div>
+                    <div class="col_3_lg"><div class="gridBox">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="gridBox">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="gridBox">.col_3_lg</div></div>
+                    <div class="col_3_lg"><div class="gridBox">.col_3_lg</div></div>
                 </section>
 
                 <div id="DynamicLayouts" class="linkHandle"></div>
@@ -167,10 +167,10 @@
                     </code>
                 </div>
                 <section class="coreGrid">
-                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
-                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
-                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
-                    <div class="col_6_sm col_3_lg"><div class="box">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="gridBox">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="gridBox">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="gridBox">.col_6_sm .col_3_lg</div></div>
+                    <div class="col_6_sm col_3_lg"><div class="gridBox">.col_6_sm .col_3_lg</div></div>
                 </section>
                 <br />
                 
@@ -201,52 +201,52 @@
                     </code>
                 </div>
                 <section class="pageClass">
-                    <div class="col__6"><div class="box">.col__6</div></div>
-                    <div class="col__6"><div class="box">.col__6</div></div>
+                    <div class="col__6"><div class="gridBox">.col__6</div></div>
+                    <div class="col__6"><div class="gridBox">.col__6</div></div>
                 </section>
             
                 <div id="GridLayout" class="linkHandle"></div>
                 <div class="col_12"><h2>Grid Layout</h2></div>
                 <section class="coreGrid">
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
-                    <div class="col_1"><div class="box">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
+                    <div class="col_1"><div class="gridBox">.col_1</div></div>
 
-                    <div class="col_2"><div class="box">.col_2</div></div>
-                    <div class="col_2"><div class="box">.col_2</div></div>
-                    <div class="col_2"><div class="box">.col_2</div></div>
-                    <div class="col_2"><div class="box">.col_2</div></div>
-                    <div class="col_2"><div class="box">.col_2</div></div>
-                    <div class="col_2"><div class="box">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
+                    <div class="col_2"><div class="gridBox">.col_2</div></div>
 
-                    <div class="col_3"><div class="box">.col_3</div></div>
-                    <div class="col_3"><div class="box">.col_3</div></div>
-                    <div class="col_3"><div class="box">.col_3</div></div>
-                    <div class="col_3"><div class="box">.col_3</div></div>
+                    <div class="col_3"><div class="gridBox">.col_3</div></div>
+                    <div class="col_3"><div class="gridBox">.col_3</div></div>
+                    <div class="col_3"><div class="gridBox">.col_3</div></div>
+                    <div class="col_3"><div class="gridBox">.col_3</div></div>
 
-                    <div class="col_4"><div class="box">.col_4</div></div>
-                    <div class="col_4"><div class="box">.col_4</div></div>
-                    <div class="col_4"><div class="box">.col_4</div></div>
+                    <div class="col_4"><div class="gridBox">.col_4</div></div>
+                    <div class="col_4"><div class="gridBox">.col_4</div></div>
+                    <div class="col_4"><div class="gridBox">.col_4</div></div>
 
-                    <div class="col_6"><div class="box">.col_6</div></div>
-                    <div class="col_6"><div class="box">.col_6</div></div>
+                    <div class="col_6"><div class="gridBox">.col_6</div></div>
+                    <div class="col_6"><div class="gridBox">.col_6</div></div>
 
-                    <div class="col_12"><div class="box">.col_12</div></div>
+                    <div class="col_12"><div class="gridBox">.col_12</div></div>
 
-                    <div class="col_5"><div class="box">.col_5</div></div>
-                    <div class="col_7"><div class="box">.col_7</div></div>
+                    <div class="col_5"><div class="gridBox">.col_5</div></div>
+                    <div class="col_7"><div class="gridBox">.col_7</div></div>
 
-                    <div class="col_8"><div class="box">.col_8</div></div>
-                    <div class="col_4"><div class="box">.col_4</div></div>
+                    <div class="col_8"><div class="gridBox">.col_8</div></div>
+                    <div class="col_4"><div class="gridBox">.col_4</div></div>
                 </section>
                 <div class="col_12">
                     <div id="Utilities" class="linkHandle"></div>
