--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Core Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="Content/_normalize.css" rel="stylesheet" />
+    <link href="Content/normalize.css" rel="stylesheet" />
     <!--[if gt IE 8]><!-->
         <link href="Content/coreGrid.css" rel="stylesheet" />   
     <!--<![endif]-->
