Update doc pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         Core Grid is a dynamic mobile first Sass/CSS grid. The grid is designed to have default break points for the majority
                         of content layouts and a secondary semantic grid for fined tuned control over layouts.
                     </p>
+                    <a href="https://github.com/splintercode/CoreGrid" class="btn">Download on GitHub</a>
                 </div>
                 <div id="PrimaryDefaultGrid" class="link-handle"></div>
                 <div class="col-12">
@@ -124,14 +125,14 @@
     &lt;div class=&quot;col-6-sm&quot;&gt; &lt;/div&gt; 
     &lt;div class=&quot;col-6-sm&quot;&gt; &lt;/div&gt;
  
-    &lt;div class=&quot;col-4-lg&quot;&gt; &lt;/div&gt; 
-    &lt;div class=&quot;col-4-lg&quot;&gt; &lt;/div&gt; 
-    &lt;div class=&quot;col-4-lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col-4-md&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col-4-md&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col-4-md&quot;&gt; &lt;/div&gt; 
 
-    &lt;div class=&quot;col-3-md&quot;&gt; &lt;/div&gt; 
-    &lt;div class=&quot;col-3-md&quot;&gt; &lt;/div&gt;
-    &lt;div class=&quot;col-3-md&quot;&gt; &lt;/div&gt; 
-    &lt;div class=&quot;col-3-md&quot;&gt; &lt;/div&gt;
+    &lt;div class=&quot;col-3-lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col-3-lg&quot;&gt; &lt;/div&gt;
+    &lt;div class=&quot;col-3-lg&quot;&gt; &lt;/div&gt; 
+    &lt;div class=&quot;col-3-lg&quot;&gt; &lt;/div&gt;
 &lt;/section&gt;
                         </pre>
                     </code>
