--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         This can be usefull for setting a max width on objects such as forms.
                     </p>
                 </div>
-                <section class="core-grid">
+                <section class="core-grid row">
                     <div class="col-8-contain"><div class="grid-box">.col-8-contain (max-width: 733.33333px)</div></div>
                     <div class="clear-both"></div>
                     <div class="col-6-contain"><div class="grid-box">.col-6-contain (max-width: 550px)</div></div>
